# real-time-f1

./: README.md  dbquest.ipynb  refresh-cadence.ts  table-schema.sql  test.ipynb
backend-python/: main.py
backend-python/data_fetcher/: fetch.py
backend-python/db/: client.py
backend_python/: main.py
backend_python/data_fetcher/: fetch.py
backend_python/db/: client.py
backend_python/fastapi/: api.py
real-time-f1/: package.json  pnpm-lock.yaml
real-time-f1/app/: page.tsx
real-time-f1/app/api/: package.json   route.ts
trackpulse/: package.json  tailwind.config.js
trackpulse/api/: pyproject.toml  requirements.txt
trackpulse/api/src/: config.py  index.py  schemas.py  utils.py
trackpulse/api/src/api/: deps.py
trackpulse/api/src/api/endpoints/: __init__.py  driver.py
trackpulse/app/: layout.tsx  page.tsx
